--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -33,6 +33,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -63,4 +64,34 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.modal{
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+  gap: 16px;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.top{
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.bottom{
+  display: flex;
+  justify-content: flex-start;
+  gap: 8px;
+}
+
+.header{
+  font-weight: 700;
+  font-size: 20px;
 }
